[gd_scene load_steps=28 format=2]

[ext_resource path="res://alternatives/for_use/robot/Skin.gd" type="Script" id=1]
[ext_resource path="res://player/Player.png" type="Texture" id=2]
[ext_resource path="res://weapons/sword/Sword.tscn" type="PackedScene" id=3]
[ext_resource path="res://props/RandomAudioPlayer2D.gd" type="Script" id=4]
[ext_resource path="res://alternatives/for_use/robot/ShakingCamera2D.gd" type="Script" id=5]
[ext_resource path="res://player/Player.gd" type="Script" id=6]
[ext_resource path="res://props/shadow/Shadow.tscn" type="PackedScene" id=7]
[ext_resource path="res://alternatives/for_use/robot/pain_05.wav" type="AudioStream" id=8]
[ext_resource path="res://alternatives/for_use/robot/pain_04.wav" type="AudioStream" id=9]
[ext_resource path="res://alternatives/for_use/robot/pain_03.wav" type="AudioStream" id=10]
[ext_resource path="res://alternatives/for_use/robot/pain_02.wav" type="AudioStream" id=11]
[ext_resource path="res://alternatives/for_use/robot/pain_01.wav" type="AudioStream" id=12]
[ext_resource path="res://alternatives/for_use/robot/death_01.wav" type="AudioStream" id=13]
[ext_resource path="res://alternatives/for_use/robot/death_02.wav" type="AudioStream" id=14]
[ext_resource path="res://alternatives/for_use/robot/death_03.wav" type="AudioStream" id=15]
[ext_resource path="res://player/trail.png" type="Texture" id=16]
[ext_resource path="res://player/WeaponHolder.gd" type="Script" id=17]
[ext_resource path="res://overlap/soft_collision/SoftCollisionComponent.tscn" type="PackedScene" id=18]
[ext_resource path="res://overlap/intercation_manager/InteractionManager.tscn" type="PackedScene" id=19]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Shadow:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.238095, 0.238095 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shadow:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.431373 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/Trail:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body/Trail:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.00945075, 0.602976 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Body/Trail:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "die"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.3, 0.45 ),
"transitions": PoolRealArray( 0.297302, 2.63902, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2.23807, 3.56457 ), Vector2( -0.474655, -41 ), Vector2( 0, -43 ), Vector2( 2.38419e-07, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.3, 0.45 ),
"transitions": PoolRealArray( 0.297302, 2.63902, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 3.23486, 12.9395, -3.92767, -14.8661 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.3, 0.45, 0.65 ),
"transitions": PoolRealArray( 0.297302, 2.63902, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.11499, 0.780799 ), Vector2( 0.718156, 1.88453 ), Vector2( 1.11825, 1.1026 ), Vector2( 1.63267, 0.0972684 ), Vector2( 2, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.45, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.831373, 0.117647, 0.235294, 1 ), Color( 1.66, 0.24, 0.48, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_disable"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shadow:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.65 ),
"transitions": PoolRealArray( 0.574349, 2.46229, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.14815, 0.783067 ), Vector2( 0.0617284, -0.0141093 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Shadow:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.65 ),
"transitions": PoolRealArray( 1, 1.46409, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.356863 ), Color( 1, 1, 1, 0.356863 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "left_roll"
length = 0.25
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Trail:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.125, 0.249729 ),
"transitions": PoolRealArray( 0.25, 2.5, 1 ),
"update": 0,
"values": [ Vector2( 2.32707, 0 ), Vector2( 11.5, 0 ), Vector2( 2.327, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Trail:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.125, 0.25 ),
"transitions": PoolRealArray( 0.25, 2.5, 1 ),
"update": 0,
"values": [ Vector2( 0.029865, 0.945081 ), Vector2( 0.126769, 0.945081 ), Vector2( 0.029865, 0.945081 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Trail:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
resource_name = "right_roll"
length = 0.25
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Trail:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.125, 0.25 ),
"transitions": PoolRealArray( 0.25, 2.5, 1 ),
"update": 0,
"values": [ Vector2( -2.65415, 0 ), Vector2( -11.6542, 0 ), Vector2( -2.65415, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Trail:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.125, 0.25 ),
"transitions": PoolRealArray( 0.25, 2.5, 1 ),
"update": 0,
"values": [ Vector2( 0.0262105, 0.945081 ), Vector2( 0.126769, 0.945081 ), Vector2( 0.0262105, 0.945081 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Trail:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=17]
radius = 13.0

[sub_resource type="CapsuleShape2D" id=18]
radius = 4.5
height = 12.0

[sub_resource type="CircleShape2D" id=21]
radius = 5.5

[node name="Player" type="KinematicBody2D"]
position = Vector2( 161, 88 )
collision_mask = 50
script = ExtResource( 6 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -2 )
hframes = 4
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
root_node = NodePath("../..")
autoplay = "idle"
anims/RESET = SubResource( 5 )
anims/die = SubResource( 7 )
anims/idle = SubResource( 6 )
anims/left_roll = SubResource( 20 )
anims/right_roll = SubResource( 19 )

[node name="Trail" type="Sprite" parent="Body"]
visible = false
modulate = Color( 0.870588, 0.305882, 0.305882, 0.784314 )
show_behind_parent = true
scale = Vector2( 0.00945075, 0.602976 )
texture = ExtResource( 16 )

[node name="WeaponHolder" type="Area2D" parent="."]
position = Vector2( 0.5, 0 )
collision_mask = 0
monitoring = false
script = ExtResource( 17 )
weapon_scene = ExtResource( 3 )

[node name="WeaponSpawningPoint" type="Position2D" parent="WeaponHolder"]
position = Vector2( 13, 0 )
__meta__ = {
"_gizmo_extents_": 2.5
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponHolder"]
visible = false
shape = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, -1 )
z_index = 2
shape = SubResource( 18 )

[node name="ShakingCamera2D" type="Camera2D" parent="."]
position = Vector2( 0.5, 0 )
current = true
zoom = Vector2( 1.25, 1.25 )
script = ExtResource( 5 )

[node name="Shadow" parent="." instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0.431373 )
position = Vector2( 0.5, 10 )
scale = Vector2( 0.238095, 0.238095 )

[node name="DamageAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.5, 0 )
script = ExtResource( 4 )
sounds = [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ) ]

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.5, 0 )
script = ExtResource( 4 )
sounds = [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ]

[node name="Timers" type="Node2D" parent="."]
position = Vector2( 0.5, 0 )

[node name="HealthRegenarationTimer" type="Timer" parent="Timers"]
wait_time = 10.0
autostart = true

[node name="StaminaRegenarationTimer" type="Timer" parent="Timers"]
wait_time = 0.5
autostart = true

[node name="SoftCollisionComponent" parent="." instance=ExtResource( 18 )]
visible = false
position = Vector2( 0, -7 )

[node name="CollisionShape2D" parent="SoftCollisionComponent" index="0"]
position = Vector2( 0.5, 13 )
shape = SubResource( 21 )

[node name="InteractionManager" parent="." instance=ExtResource( 19 )]
visible = false
position = Vector2( 0.5, 0 )

[editable path="SoftCollisionComponent"]
